# txp

./: CLAUDE.md  README.md  pyproject.toml  txp_client.py  txp_server.py
.claude/skills/execute-issues/: SKILL.md
.claude/skills/release-version/: SKILL.md
.claude/skills/upload-issues/: SKILL.md
client/: cli.py
documentation/: architecture.md
server/: cli.py  connection.py  listener.py
specifications/: ARCHITECTURE.md  ROADMAP.md  TXP-Server-Specification-EN.md  TXP-Server-Specification.md
specifications/roadmap/: phase-0-execution-report.md  phase-0-github-report.md  phase-0-issues.md  phase-0-tasks.md  phase-1-issues.md  phase-1-tasks.md
tests/: conftest.py  test_cli.py  test_echo.py
