[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "txp"
version = "0.1.0"
requires-python = ">=3.11"
description = "TXP (Text Transfer Protocol) — a custom text-based protocol server and client for serving Markdown pages over TCP."

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
txp-server = "server.cli:main_server"
txp-client = "client.cli:main_client"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "protocol*", "client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
